Fix various CSS issues to improve readability

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -114,6 +114,8 @@
 		text-align:center;
 	}
 
+	.product-image img {
+	}
 
 	.photo-panel {
 		padding: 25px 0px 25px 0px;
@@ -316,7 +318,7 @@
 
 	.product-list {
 		.product-list-row {
-			padding:0px 0px 20px 0px;
+			padding:0px 0px 40px 0px;
 			font-size:100%;
 		}
 
